Make things less messy
